Finalização dos testes na service